# untitled_os

./: .gitignore  Cargo.toml  README.md  do_build_release.sh  do_run_qemu.sh  do_write_bootable.sh
.cargo/: config.toml
qemu/: OVMF_CODE.fd
qemu/esp/: NvVars
qemu/esp/efi/boot/: bootx64.efi
src/: main.rs
src/kernel/: mod.rs  native_graphics.rs
src/kernel/console/: char_bitmaps.rs  char_buffer.rs  mod.rs
src/kernel/native_graphics/: mod.rs
src/uefi_boot/: mod.rs  uefi_graphics.rs
