[package]
name = "untitled_os"
version = "0.1.0"
edition = "2021"
authors = ["alebref <contact@alebref.fr>"]
repository = "https://github.com/alebref/untitled_os"

[profile.release]
panic = "abort"
opt-level = 3
strip = true

[dependencies]
# spin = { version = "0.9.8", features = ["mutex"] }
uefi = "0.26.0"
uefi-services = "0.23.0"